프론트엔드 업데이트

--- a/front/contact.html
+++ b/front/contact.html
@@ -107,7 +107,7 @@
                 <input type="radio" name="contactMethod" value="오픈 카톡"> 오픈 카톡
             </div>
             <div class="input__container">
-                <input type="text" id="character" name="character" placeholder="SNS 계정 혹은 오픈 카톡 링크" required />
+                <input type="text" id="snsid" name="snsid" placeholder="SNS 계정 혹은 오픈 카톡 링크" required />
             </div>
     
              <div class="input__container">
