프론트엔드 업데이트

--- a/front/contact.html
+++ b/front/contact.html
@@ -107,7 +107,8 @@
                 <input type="radio" name="contactMethod" value="오픈 카톡"> 오픈 카톡
             </div>
             <div class="input__container">
-                <input type="text" id="snsid" name="snsid" placeholder="SNS 계정 혹은 오픈 카톡 링크" required />
+                <label for="date">"SNS 계정 혹은 오픈 카톡 링크"</label>
+                <textarea id="snsid" name="snsid" required></textarea>
             </div>
     
              <div class="input__container">
