--- a/front/contact.html
+++ b/front/contact.html
@@ -74,7 +74,7 @@
             </div>
     
             <div>
-                <label for="contact">촬영 종류</label><br><br>
+                <label>촬영 종류</label><br><br>
                 <input type="radio" name="contact" value="코스프레 촬영"> 코스프레 촬영
                 <input type="radio" name="contact" value="컨셉 촬영"> 컨셉 촬영
                 <input type="radio" name="contact" value="스냅 촬영"> 스냅 촬영
@@ -101,7 +101,7 @@
             </div>
     
             <div>
-                <label for="contactMethod">연락 가능한 방법</label> <br><br>
+                <label>연락 가능한 방법</label> <br><br>
                 <input type="radio" name="contactMethod" value="트위터 DM"> 트위터 DM
                 <input type="radio" name="contactMethod" value="인스타 DM"> 인스타 DM
                 <input type="radio" name="contactMethod" value="오픈 카톡"> 오픈 카톡
