--- a/front/index.html
+++ b/front/index.html
@@ -29,7 +29,7 @@
         body { font-family: 'S-CoreDream', 'SF_HambakSnow', serif }
     </style>
 
-    <script src="index.js" defer></script>
+    <script src="indexpage.js" defer></script>
 
 </head>
 
