--- a/front/contact.html
+++ b/front/contact.html
@@ -107,7 +107,7 @@
                 <input type="radio" name="contactMethod" value="오픈 카톡"> 오픈 카톡
             </div>
             <div class="input__container">
-                <label for="date">"SNS 계정 혹은 오픈 카톡 링크"</label>
+                <label for="date">SNS 계정 혹은 오픈 카톡 링크</label>
                 <textarea id="snsid" name="snsid" required></textarea>
             </div>
     
@@ -117,7 +117,7 @@
             </div>
     
             <div>
-                <label>시안 (jpg, png, pdf 첨부 가능 , 최대 10MB)</label><br><br>
+                <label>시안 (  jpg, png, pdf 첨부 가능 , 최대 10MB  )</label><br><br>
                 <input type="file" id="fileInput" name="files" accept=".jpeg,.png,.pdf" multiple />
             </div>
 
