--- a/front/contact.html
+++ b/front/contact.html
@@ -112,7 +112,7 @@
             </div>
     
              <div class="input__container">
-                <label for="message">그 외 문의사항 (선텍) </label>
+                <label for="message">그 외 문의사항 (선택) </label>
                 <textarea id="message" name="message"></textarea>
             </div>
     
