--- a/front/contact.html
+++ b/front/contact.html
@@ -117,7 +117,7 @@
             </div>
     
             <div>
-                <label>시안 (  jpg, png, pdf 첨부 가능 , 최대 10MB  )</label><br><br>
+                <label>시안 (  jpg, png, pdf 첨부 가능 , 최대 10MB /  선택  )</label><br><br>
                 <input type="file" id="fileInput" name="files" accept=".jpeg,.png,.pdf" multiple />
             </div>
 
