--- a/front/popo.html
+++ b/front/popo.html
@@ -113,7 +113,7 @@
                         </div></a>
 
 
-                    <a href="https://x.com/Rrikkaii"> 
+                    <a href="https://x.com/@Rrikkaii"> 
                         <div class="hover-img">
                             <img src="kaka1.jpg" data-category="cosplay studio" />
                             <span class="hover-text"> 2024.08<br><br>나루토<br>하타케 카카시 <br><br> 휴지님</span>
@@ -211,10 +211,11 @@
                         <span class="hover-text">2024.12<br><br> CHRISTMAS <br><br> 타토님</span> 
                     </div></a>
 
-                    <div class="hover-img">
-                    <img src="kemo1.jpg" data-category="cosplay studio" />
-                    <span class="hover-text">2025.01<br><br> 좀비 고등학교 <br>설보리 <br><br> 케모님</span> 
-                    </div>
+                    <a href="bori.html">
+                        <div class="hover-img">
+                        <img src="bori1.jpg" data-category="cosplay studio" />
+                        <span class="hover-text">2025.01<br><br> 좀비 고등학교 <br>설보리 <br><br> 케모님</span> 
+                    </div></a>
 
 
                 </div>
