--- a/front/bori.html
+++ b/front/bori.html
@@ -74,28 +74,28 @@
         <div class="photo-win">
           <div class="up">
             <div class="mi2">
-              <img src="bori1.jpg"  onclick="openModal(this)" />
+                <img src="bori1.jpg" loading="lazy" onclick="openModal(this)" >
             </div>
             <div class="mi2">
-              <img src="bori2.jpg"  onclick="openModal(this)" />
+              <img src="bori2.jpg" loading="lazy"   onclick="openModal(this)" />
             </div>
             <div class="mi2">
-              <img src="bori7.jpg"  onclick="openModal(this)" />
+              <img src="bori7.jpg" loading="lazy"  onclick="openModal(this)" />
             </div>
           </div>
           <div class="down">
             <div class="mi4">
-              <img src="bori3.jpg"  onclick="openModal(this)" />
+              <img src="bori3.jpg" loading="lazy"  onclick="openModal(this)" />
             </div>
           <div class="up">
             <div class="mi2">
-              <img src="bori6.jpg"  onclick="openModal(this)" />
+              <img src="bori6.jpg" loading="lazy"  onclick="openModal(this)" />
             </div>
             <div class="mi2">
-              <img src="bori5.jpg"  onclick="openModal(this)" />
+              <img src="bori5.jpg" loading="lazy" onclick="openModal(this)" />
             </div>
             <div class="mi2">
-              <img src="bori4.jpg"  onclick="openModal(this)" />
+              <img src="bori4.jpg" loading="lazy" onclick="openModal(this)" />
             </div>
           </div>
           
