--- a/front/bori.html
+++ b/front/bori.html
@@ -74,28 +74,28 @@
         <div class="photo-win">
           <div class="up">
             <div class="mi2">
-                <img src="bori1.webp" loading="lazy" onclick="openModal(this)" >
+                <img src="bori1.webp"  onclick="openModal(this)" >
             </div>
             <div class="mi2">
-              <img src="bori2.webp" loading="lazy"   onclick="openModal(this)" />
+              <img src="bori2.webp"    onclick="openModal(this)" />
             </div>
             <div class="mi2">
-              <img src="bori7.webp" loading="lazy"  onclick="openModal(this)" />
+              <img src="bori7.webp"   onclick="openModal(this)" />
             </div>
           </div>
           <div class="down">
             <div class="mi4">
-              <img src="bori3.webp" loading="lazy"  onclick="openModal(this)" />
+              <img src="bori3.webp"   onclick="openModal(this)" />
             </div>
           <div class="up">
             <div class="mi2">
-              <img src="bori6.webp" loading="lazy"  onclick="openModal(this)" />
+              <img src="bori6.webp"   onclick="openModal(this)" />
             </div>
             <div class="mi2">
-              <img src="bori5.webp" loading="lazy" onclick="openModal(this)" />
+              <img src="bori5.webp"  onclick="openModal(this)" />
             </div>
             <div class="mi2">
-              <img src="bori4.webp" loading="lazy" onclick="openModal(this)" />
+              <img src="bori4.webp"  onclick="openModal(this)" />
             </div>
           </div>
           
