--- a/front/index.html
+++ b/front/index.html
@@ -71,17 +71,17 @@
          <div class="slider-container">
             <div class="slider" id="slider">
                 <!-- 이미지 리스트 -->
-                <img src="a1.webp"  alt="Image 1" class="slide">
-                <img src="a2.webp"  alt="Image 2" class="slide">
-                <img src="a3.webp"  alt="Image 3" class="slide">
-                <img src="a4.webp"  alt="Image 4" class="slide">
-                <img src="a5.webp"  alt="Image 5" class="slide">
-                <img src="a6.webp"  alt="Image 6" class="slide">
-                <img src="a7.webp"  alt="Image 7" class="slide">
-                <img src="a8.webp"  alt="Image 8" class="slide">
-                <img src="a9.webp"  alt="Image 9" class="slide">
-                <img src="a10.webp"  alt="Image 10" class="slide">
-                <img src="a11.webp"  alt="Image 11" class="slide">
+                <img data-src="a1.webp" class="slide lazy" alt="Image 1" class="slide">
+                <img data-src="a2.webp" class="slide lazy" alt="Image 2" class="slide">
+                <img data-src="a3.webp" class="slide lazy" alt="Image 3" class="slide">
+                <img data-src="a4.webp" class="slide lazy" alt="Image 4" class="slide">
+                <img data-src="a5.webp" class="slide lazy" alt="Image 5" class="slide">
+                <img data-src="a6.webp" class="slide lazy" alt="Image 6" class="slide">
+                <img data-src="a7.webp" class="slide lazy" alt="Image 7" class="slide">
+                <img data-src="a8.webp" class="slide lazy" alt="Image 8" class="slide">
+                <img data-src="a9.webp" class="slide lazy" alt="Image 9" class="slide">
+                <img data-src="a10.webp" class="slide lazy" alt="Image 10" class="slide">
+                <img data-src="a11.webp" class="slide lazy" alt="Image 11" class="slide">
             </div>
         </div>
   
