--- a/front/madoka.html
+++ b/front/madoka.html
@@ -79,7 +79,7 @@
             <img data-src="/front/madoka1.webp"  onclick="openModal(this)" />
           </div>
           <div class="photo-madoka3">
-            <img src="/front/madoka4.webp"  onclick="openModal(this)" />
+            <img src="madoka4.webp"  onclick="openModal(this)" />
           </div>       
           
           <div class="photo-madoka4">
