--- a/front/hanna.html
+++ b/front/hanna.html
@@ -76,13 +76,13 @@
 
         <div class="photo-hanna">
           <div class="photo-hanna2">
-            <img data-src="/front/hanna2.webp" alt="한나1" onclick="openModal(this)" />
-            <img src="/front/hanna1.webp" alt="한나1" onclick="openModal(this)" />
+            <img data-src="hanna2.webp" alt="한나1" onclick="openModal(this)" />
+            <img src="hanna1.webp" alt="한나1" onclick="openModal(this)" />
           </div>
             
           <div class="photo-hanna3">
-            <img src="/front/hanna4.webp" alt="한나1" onclick="openModal(this)" />
-            <img src="/front/hanna3.webp" alt="한나1" onclick="openModal(this)" />
+            <img src="hanna4.webp" alt="한나1" onclick="openModal(this)" />
+            <img src="hanna3.webp" alt="한나1" onclick="openModal(this)" />
           </div>
             
         </div>
