--- a/front/nozaki.html
+++ b/front/nozaki.html
@@ -76,17 +76,17 @@
 
         <div class="photo-nozaki">
           <div class="photo-noza1">
-            <img data-src="/front/nozaki1.webp"  onclick="openModal(this)" />
-            <img src="/front/nozaki4.webp"  onclick="openModal(this)" />
-            <img src="/front/nozaki3.webp"  onclick="openModal(this)" />
-            <img src="/front/nozaki9.webp"  onclick="openModal(this)" />
+            <img data-src="nozaki1.webp"  onclick="openModal(this)" />
+            <img src="nozaki4.webp"  onclick="openModal(this)" />
+            <img src="nozaki3.webp"  onclick="openModal(this)" />
+            <img src="nozaki9.webp"  onclick="openModal(this)" />
            
           </div>
           <div class="photo-noza2">
-            <img src="/front/nozaki2.webp"  onclick="openModal(this)" />
-            <img src="/front/nozaki7.webp"  onclick="openModal(this)" />
-            <img src="/front/nozaki6.webp"  onclick="openModal(this)" />
-            <img src="/front/nozaki8.webp"  onclick="openModal(this)" />
+            <img src="nozaki2.webp"  onclick="openModal(this)" />
+            <img src="nozaki7.webp"  onclick="openModal(this)" />
+            <img src="nozaki6.webp"  onclick="openModal(this)" />
+            <img src="nozaki8.webp"  onclick="openModal(this)" />
           </div>          
         </div>
         
