--- a/front/bori.html
+++ b/front/bori.html
@@ -74,28 +74,28 @@
         <div class="photo-win">
           <div class="up">
             <div class="mi2">
-                <img data-src="/front/bori1.webp"  onclick="openModal(this)" >
+                <img data-src="bori1.webp"  onclick="openModal(this)" >
             </div>
             <div class="mi2">
-              <img src="/front/bori2.webp"    onclick="openModal(this)" />
+              <img src="bori2.webp"    onclick="openModal(this)" />
             </div>
             <div class="mi2">
-              <img src="/front/bori7.webp"   onclick="openModal(this)" />
+              <img src="bori7.webp"   onclick="openModal(this)" />
             </div>
           </div>
           <div class="down">
             <div class="mi4">
-              <img src="/front/bori3.webp"   onclick="openModal(this)" />
+              <img src="bori3.webp"   onclick="openModal(this)" />
             </div>
           <div class="up">
             <div class="mi2">
-              <img src="/front/bori6.webp"   onclick="openModal(this)" />
+              <img src="bori6.webp"   onclick="openModal(this)" />
             </div>
             <div class="mi2">
-              <img src="/front/bori5.webp"  onclick="openModal(this)" />
+              <img src="bori5.webp"  onclick="openModal(this)" />
             </div>
             <div class="mi2">
-              <img src="/front/bori4.webp"  onclick="openModal(this)" />
+              <img src="bori4.webp"  onclick="openModal(this)" />
             </div>
           </div>
           
