--- a/front/christmas.html
+++ b/front/christmas.html
@@ -69,16 +69,16 @@
 
         <div class="photo-c">
           <div class="mi2">
-            <img data-src="/front/c7.webp"  onclick="openModal(this)" />
-            <img src="/front/c6.webp"  onclick="openModal(this)" />
+            <img data-src="c7.webp"  onclick="openModal(this)" />
+            <img src="c6.webp"  onclick="openModal(this)" />
           </div>
           <div class="mi3">
-            <img src="/front/c3.webp" onclick="openModal(this)" />
-            <img src="/front/c1.webp" onclick="openModal(this)" />
+            <img src="c3.webp" onclick="openModal(this)" />
+            <img src="c1.webp" onclick="openModal(this)" />
           </div>
           <div class="mi2">
-            <img src="/front/c5.webp"  onclick="openModal(this)" />
-            <img src="/front/c4.webp"  onclick="openModal(this)" />
+            <img src="c5.webp"  onclick="openModal(this)" />
+            <img src="c4.webp"  onclick="openModal(this)" />
           </div>         
         </div>
         
