--- a/front/muru.html
+++ b/front/muru.html
@@ -75,11 +75,11 @@
 
         <div class="photo-jing">
             <div class="photo-jing3">
-                <img data-src="/front/muru1.webp" alt="한나1" onclick="openModal(this)" />
+                <img data-src="muru1.webp" alt="한나1" onclick="openModal(this)" />
               </div>
           <div class="photo-jing2">
-            <img src="/front/muru2.webp" alt="한나1" onclick="openModal(this)" />
-            <img src="/front/muru3.webp" alt="한나1" onclick="openModal(this)" />
+            <img src="muru2.webp" alt="한나1" onclick="openModal(this)" />
+            <img src="muru3.webp" alt="한나1" onclick="openModal(this)" />
           </div>
 
           
