--- a/front/tama.html
+++ b/front/tama.html
@@ -74,13 +74,13 @@
 
         <div class="photo-tama">
           <div class="mi2">
-            <img src="/front/tama1.webp"  onclick="openModal(this)" />
+            <img src="tama1.webp"  onclick="openModal(this)" />
           </div>
           <div class="mi2">
-            <img src="/front/tama2.webp"  onclick="openModal(this)" />
+            <img src="tama2.webp"  onclick="openModal(this)" />
           </div>
           <div class="mi2">
-            <img src="/front/tama3.webp"  onclick="openModal(this)" />
+            <img src="tama3.webp"  onclick="openModal(this)" />
           </div>
             
           
