--- a/front/christmas.html
+++ b/front/christmas.html
@@ -70,15 +70,15 @@
         <div class="photo-c">
           <div class="mi2">
             <img data-src="c7.webp"  onclick="openModal(this)" />
-            <img src="c6.webp"  onclick="openModal(this)" />
+            <img data-src="/c6.webp"  onclick="openModal(this)" />
           </div>
           <div class="mi3">
-            <img src="c3.webp" onclick="openModal(this)" />
-            <img src="c1.webp" onclick="openModal(this)" />
+            <img data-src="/c3.webp" onclick="openModal(this)" />
+            <img data-src="/c1.webp" onclick="openModal(this)" />
           </div>
           <div class="mi2">
-            <img src="c5.webp"  onclick="openModal(this)" />
-            <img src="c4.webp"  onclick="openModal(this)" />
+            <img data-src="/c5.webp"  onclick="openModal(this)" />
+            <img data-src="/c4.webp"  onclick="openModal(this)" />
           </div>         
         </div>
         
