--- a/front/happiness.html
+++ b/front/happiness.html
@@ -75,17 +75,17 @@
         <div class="photo-gallery">
           <div class="happy1">
             <img data-src="s2.webp" alt="크리스마스1" onclick="openModal(this)" />
-            <img src="s1.webp" alt="크리스마스2" onclick="openModal(this)" />
-            <img src="s6.webp" alt="크리스마스3" onclick="openModal(this)" />
+            <img data-src="/s1.webp" alt="크리스마스2" onclick="openModal(this)" />
+            <img data-src="/s6.webp" alt="크리스마스3" onclick="openModal(this)" />
           </div>
           <div class="happy2">
-            <img src="s10.webp" alt="크리스마스4" onclick="openModal(this)" />
-            <img src="s8.webp" alt="크리스마스5" onclick="openModal(this)" />
+            <img data-src="/s10.webp" alt="크리스마스4" onclick="openModal(this)" />
+            <img data-src="/s8.webp" alt="크리스마스5" onclick="openModal(this)" />
           </div>
             <div class="happy3">
-              <img src="s5.webp" alt="크리스마스6" onclick="openModal(this)" />
-              <img src="s3.webp" alt="크리스마스6" onclick="openModal(this)" />
-              <img src="s7.webp" alt="크리스마스6" onclick="openModal(this)" />
+              <img data-src="/s5.webp" alt="크리스마스6" onclick="openModal(this)" />
+              <img data-src="/s3.webp" alt="크리스마스6" onclick="openModal(this)" />
+              <img data-src="/s7.webp" alt="크리스마스6" onclick="openModal(this)" />
             </div>
       
         </div>
