--- a/front/madoka.html
+++ b/front/madoka.html
@@ -79,12 +79,12 @@
             <img data-src="madoka1.webp"  onclick="openModal(this)" />
           </div>
           <div class="photo-madoka3">
-            <img src="madoka4.webp"  onclick="openModal(this)" />
+            <img data-src="/madoka4.webp"  onclick="openModal(this)" />
           </div>       
           
           <div class="photo-madoka4">
-            <img src="madoka3.webp"  onclick="openModal(this)" />
-            <img src="madoka5.webp"  onclick="openModal(this)" />
+            <img data-src="/madoka3.webp"  onclick="openModal(this)" />
+            <img data-src="/madoka5.webp"  onclick="openModal(this)" />
           </div>      
         </div>
         
