--- a/front/summer.html
+++ b/front/summer.html
@@ -77,12 +77,12 @@
         
 
         <div class="photo-gallery">
-            <img src="c3.webp" alt="크리스마스1" onclick="openModal(this)" />
-            <img src="c1.webp" alt="크리스마스2" onclick="openModal(this)" />
-            <img src="c7.webp" alt="크리스마스3" onclick="openModal(this)" />
-            <img src="c6.webp" alt="크리스마스4" onclick="openModal(this)" />
-            <img src="c5.webp" alt="크리스마스5" onclick="openModal(this)" />
-            <img src="c4.webp" alt="크리스마스6" onclick="openModal(this)" />
+            <img data-src="/c3.webp" alt="크리스마스1" onclick="openModal(this)" />
+            <img data-src="/c1.webp" alt="크리스마스2" onclick="openModal(this)" />
+            <img data-src="/c7.webp" alt="크리스마스3" onclick="openModal(this)" />
+            <img data-src="/c6.webp" alt="크리스마스4" onclick="openModal(this)" />
+            <img data-src="/c5.webp" alt="크리스마스5" onclick="openModal(this)" />
+            <img data-src="/c4.webp" alt="크리스마스6" onclick="openModal(this)" />
         </div>
         
         <div id="modal" class="modal">
