--- a/front/bori.html
+++ b/front/bori.html
@@ -77,25 +77,25 @@
                 <img data-src="bori1.webp"  onclick="openModal(this)" >
             </div>
             <div class="mi2">
-              <img data-src="/bori2.webp"    onclick="openModal(this)" />
+              <img data-src="bori2.webp"    onclick="openModal(this)" />
             </div>
             <div class="mi2">
-              <img data-src="/bori7.webp"   onclick="openModal(this)" />
+              <img data-src="bori7.webp"   onclick="openModal(this)" />
             </div>
           </div>
           <div class="down">
             <div class="mi4">
-              <img data-src="/bori3.webp"   onclick="openModal(this)" />
+              <img data-src="bori3.webp"   onclick="openModal(this)" />
             </div>
           <div class="up">
             <div class="mi2">
-              <img data-src="/bori6.webp"   onclick="openModal(this)" />
+              <img data-src="bori6.webp"   onclick="openModal(this)" />
             </div>
             <div class="mi2">
-              <img data-src="/bori5.webp"  onclick="openModal(this)" />
+              <img data-src="bori5.webp"  onclick="openModal(this)" />
             </div>
             <div class="mi2">
-              <img data-src="/bori4.webp"  onclick="openModal(this)" />
+              <img data-src="bori4.webp"  onclick="openModal(this)" />
             </div>
           </div>
           
