--- a/front/contact.html
+++ b/front/contact.html
@@ -165,7 +165,7 @@
             </p>
         </footer>
     </div>
-    <script src="/contact.js" defer></script>   
+    <script src="contact.js" defer></script>   
 </body>
 
 </html>
