--- a/front/jing.html
+++ b/front/jing.html
@@ -76,11 +76,11 @@
         <div class="photo-jing">
           <div class="photo-jing2">
             <img data-src="jing1.webp" alt="한나1" onclick="openModal(this)" />
-            <img data-src="/jing2.webp" alt="한나1" onclick="openModal(this)" />
+            <img data-src="jing2.webp" alt="한나1" onclick="openModal(this)" />
           </div>
 
           <div class="photo-jing3">
-            <img data-src="/jing3.webp" alt="한나1" onclick="openModal(this)" />
+            <img data-src="jing3.webp" alt="한나1" onclick="openModal(this)" />
           </div>
 
         </div>
