--- a/front/muru.html
+++ b/front/muru.html
@@ -78,8 +78,8 @@
                 <img data-src="muru1.webp" alt="한나1" onclick="openModal(this)" />
               </div>
           <div class="photo-jing2">
-            <img data-src="/muru2.webp" alt="한나1" onclick="openModal(this)" />
-            <img data-src="/muru3.webp" alt="한나1" onclick="openModal(this)" />
+            <img data-src="muru2.webp" alt="한나1" onclick="openModal(this)" />
+            <img data-src="muru3.webp" alt="한나1" onclick="openModal(this)" />
           </div>
 
           
