--- a/front/wendsday.html
+++ b/front/wendsday.html
@@ -76,11 +76,11 @@
 
         <div class="wends-photo">
             <img data-src="wends7.webp" onclick="openModal(this)" />
-            <img data-src="/wends5.webp" onclick="openModal(this)" />
-            <img data-src="/wends6.webp" onclick="openModal(this)" />
-            <img data-src="/wends2.webp" onclick="openModal(this)" />
-            <img data-src="/wends3.webp" onclick="openModal(this)" />
-            <img data-src="/wends4.webp" onclick="openModal(this)" />
+            <img data-src="wends5.webp" onclick="openModal(this)" />
+            <img data-src="wends6.webp" onclick="openModal(this)" />
+            <img data-src="wends2.webp" onclick="openModal(this)" />
+            <img data-src="wends3.webp" onclick="openModal(this)" />
+            <img data-src="wends4.webp" onclick="openModal(this)" />
         </div>
         
         <div id="modal" class="modal">
