--- a/front/win.html
+++ b/front/win.html
@@ -81,15 +81,15 @@
               <img data-src="win2.webp" onclick="openModal(this)" />
             </div>
             <div class="mi2">
-              <img data-src="/win3.webp"  onclick="openModal(this)" />
+              <img data-src="win3.webp"  onclick="openModal(this)" />
             </div>
             <div class="mi2">
-              <img data-src="/win4.webp"  onclick="openModal(this)" />
+              <img data-src="win4.webp"  onclick="openModal(this)" />
             </div>
           </div>
           <div class="down">
             <div class="mi4">
-              <img data-src="/win1.webp"  onclick="openModal(this)" />
+              <img data-src="win1.webp"  onclick="openModal(this)" />
             </div>
             
           </div>
