--- a/front/hanna.html
+++ b/front/hanna.html
@@ -77,12 +77,12 @@
         <div class="photo-hanna">
           <div class="photo-hanna2">
             <img data-src="hanna2.webp" alt="한나1" onclick="openModal(this)" />
-            <img data-src="/hanna1.webp" alt="한나1" onclick="openModal(this)" />
+            <img data-src="hanna1.webp" alt="한나1" onclick="openModal(this)" />
           </div>
             
           <div class="photo-hanna3">
-            <img data-src="/hanna4.webp" alt="한나1" onclick="openModal(this)" />
-            <img data-src="/hanna3.webp" alt="한나1" onclick="openModal(this)" />
+            <img data-src="hanna4.webp" alt="한나1" onclick="openModal(this)" />
+            <img data-src="hanna3.webp" alt="한나1" onclick="openModal(this)" />
           </div>
             
         </div>
