--- a/front/nozaki.html
+++ b/front/nozaki.html
@@ -77,16 +77,16 @@
         <div class="photo-nozaki">
           <div class="photo-noza1">
             <img data-src="nozaki1.webp"  onclick="openModal(this)" />
-            <img data-src="/nozaki4.webp"  onclick="openModal(this)" />
-            <img data-src="/nozaki3.webp"  onclick="openModal(this)" />
-            <img data-src="/nozaki9.webp"  onclick="openModal(this)" />
+            <img data-src="nozaki4.webp"  onclick="openModal(this)" />
+            <img data-src="nozaki3.webp"  onclick="openModal(this)" />
+            <img data-src="nozaki9.webp"  onclick="openModal(this)" />
            
           </div>
           <div class="photo-noza2">
-            <img data-src="/nozaki2.webp"  onclick="openModal(this)" />
-            <img data-src="/nozaki7.webp"  onclick="openModal(this)" />
-            <img data-src="/nozaki6.webp"  onclick="openModal(this)" />
-            <img data-src="/nozaki8.webp"  onclick="openModal(this)" />
+            <img data-src="nozaki2.webp"  onclick="openModal(this)" />
+            <img data-src="nozaki7.webp"  onclick="openModal(this)" />
+            <img data-src="nozaki6.webp"  onclick="openModal(this)" />
+            <img data-src="nozaki8.webp"  onclick="openModal(this)" />
           </div>          
         </div>
         
