--- a/front/popo.html
+++ b/front/popo.html
@@ -106,6 +106,12 @@
                         <span class="hover-text">2024.12<br> 서울 코믹월드 <br><br> 강철의 연급술사 <br>윈리 록벨 <br><br>타토님</span>
                     </div></a>
 
+                    <a href="https://x.com/@szz5owo">
+                        <div class="hover-img">
+                            <img src="ka1.webp"  data-category="cosplay event" />
+                            <span class="hover-text">2025.02<br> 일러스타 페스  <br><br> Blue Archive <br> 이바라기 요시미 <br><br> 꺄님</span>
+                        </div></a>   
+
                     <a href="https://x.com/@yan_yammi">
                         <div class="hover-img2">
                             <img src="maho1.webp"  data-category="cosplay outside" />
@@ -135,6 +141,12 @@
                             <img src="noa1.webp"  data-category="cosplay outside" />
                             <span class="hover-text"> 2025.09<br><br>플레이브<br> 노아 <br><br> 김하품님</span>
                         </div></a>  
+
+                    <a href="https://x.com/@rityuv">
+                        <div class="hover-img">
+                            <img src="yuv1.webp"  data-category="cosplay event" /> 
+                            <span class="hover-text">2025.02<br> 일러스타 페스 <br><br> 명조: 워더링 웨이브 <br> 카멜리아 <br><br> 유브님</span>
+                        </div></a>
 
                     <a href="https://x.com/@szz5owo">
                         <div class="hover-img">
