--- a/front/popo.html
+++ b/front/popo.html
@@ -108,9 +108,9 @@
 
                     <a href="https://x.com/@szz5owo">
                         <div class="hover-img">
-                            <img src="ka1.webp"  data-category="cosplay event" />
-                            <span class="hover-text">2025.02<br> 일러스타 페스  <br><br> Blue Archive <br> 이바라기 요시미 <br><br> 꺄님</span>
-                        </div></a>   
+                            <img src="yoshi1.webp"  data-category="cosplay event" />
+                            <span class="hover-text">2025.02<br> 일러스타 페스 <br><br> Blue Archive <br> 이바라기 요시미 <br><br> 꺄님</span>
+                        </div></a>  
 
                     <a href="https://x.com/@yan_yammi">
                         <div class="hover-img2">
