--- a/front/popo.html
+++ b/front/popo.html
@@ -94,9 +94,9 @@
                          <span class="hover-text">2024.12<br> 서울 코믹월드 <br><br> 붕괴: 스타레일 <br> 비소 <br><br> 유브님</span>
                     </div></a>
 
-                    <a href="https://x.com/@POTATOdaayo"> 
+                    <a href="saya.html"> 
                         <div class="hover-img2">
-                            <img src="sayaka1.webp"  data-category="cosplay studio" />
+                            <img src="saya6.webp"  data-category="cosplay studio" />
                             <span class="hover-text2"> 2025.02<br><br>마법소녀 마도카☆마기카<br>  미키 사야카 <br><br> 타토님</span>
                         </div></a>
 
@@ -213,7 +213,7 @@
                     <a href="nozaki.html">
                         <div class="hover-img2">
                             <img src="nozaki1.webp"  data-category="cosplay outside" />
-                            <span class="hover-text2"> 2024.10<br><br>월간순정 노자키군<br><br> One님 & 뽐님 & YAN님</span>
+                            <span class="hover-text2"> 2024.10<br><br>월간순정 노자키군<br>노자키&미코시바&치요<br><br> One님 & 뽐님 & YAN님</span>
                         </div></a>
 
 
@@ -272,8 +272,14 @@
 
                     <div class="hover-img">
                     <img src="nozoeri1.webp"  data-category="cosplay studio" />
-                    <span class="hover-text">2024.10<br><br> 러브라이브! <br><br> 꺄님&하영님</span> 
+                    <span class="hover-text">2024.10<br><br> 러브라이브! <br> 노조미&에리<br><br> 꺄님&하영님</span> 
                     </div>
+
+                    <a href="39.html"> 
+                    <div class="hover-img2">
+                        <img src="391.webp"  data-category="cosplay studio" />
+                        <span class="hover-text2">2025.03<br><br> 39 culture <br>루카&미쿠&린&메이코<br><br> 챠이님&나나님&쟈강님&신설님</span> 
+                    </div></a>
 
                 </div>              
             </div>
